# cssed-filebrowser-plugin

./: ChangeLog  Makefile.in  NEWS  README  config.h.in  configure  configure.in
CVS/: Entries  Repository
autom4te.cache/: output.0  requests  traces.0  traces.1
pixmaps/: Makefile
pixmaps/CVS/: Entries  Repository
po/: ChangeLog  POTFILES.in  cssed-filebrowser-plugin.pot  es.po  fr.po
po/CVS/: Entries  Repository
redhat/: cssed-filebrowser-plugin.spec
redhat/CVS/: Entries  Repository
src/: ChangeLog  Makefile.am  Makefile.in  callbacks.c  callbacks.h  dir.h  editlist.c  editlist.h  file.h  filebrowser.c  filebrowser.h  interface.c  interface.h
src/CVS/: Entries  Repository
